added options to convert from vtt to srt.

--- a/config.cfg
+++ b/config.cfg
@@ -11,3 +11,18 @@ captions.txt
 
 #Should I use the default file automatacly
 True
+
+#Default size
+100
+
+#Default horizontal position
+100
+
+#Default vertical position
+100
+
+#Enable debugging:
+1
+
+#Number of runs:
+1
