updated some of the features and did some error checking

--- a/config.cfg
+++ b/config.cfg
@@ -9,7 +9,7 @@ srt
 #default file to use:
 captions.txt
 
-#Should I use the default file automatacly
+#Should I use the default file automatically
 True
 
 #Default size
@@ -25,4 +25,4 @@ True
 1
 
 #Number of runs:
-1
+0
